test/sema/inference/type_inference_call.yl
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
struct S { x: number }

fn bar(x: number): unit {}

fn foo(): number {
  let x;

  bar(x);

  // CHECK: [[# @LINE + 1 ]]:9: error: expected to assign 'number' but received 'S' instead
  x = S { x: 1 };
}

fn main(): unit {}

// CHECK-NOT: {{.*error.*}}
